// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Components - App Snapshots renders error 1`] = `
<div>
  <div
    className="ui green center aligned segment"
  >
    <div
      className="ui three column grid"
    >
      <div
        className="four wide column"
      />
      <div
        className="middle aligned eight wide column"
      >
        <h1
          className="ui header"
        >
          Spotify Stats
        </h1>
      </div>
      <div
        className="four wide column"
      >
        <button
          className="ui green inverted right floated button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          Log in with Spotify
        </button>
      </div>
    </div>
  </div>
  <div
    className="ui center aligned container"
  >
    <h1
      className="ui header"
      style={
        Object {
          "fontSize": "4em",
          "marginTop": "1.5em",
        }
      }
    >
      Error :(
    </h1>
    <h2
      className="ui header"
    >
      
       Go back to
      <a
        href="/"
        onClick={[Function]}
      >
         Home
      </a>
      .
    </h2>
  </div>
  <div
    className="ui center aligned segment footer"
  >
    <p>
      Favicon made by
      <a
        href="https://www.flaticon.com/authors/gregor-cresnar"
        rel="noopener noreferrer"
        target="_blank"
      >
         Gregor Cresnar 
      </a>
      from
      <a
        href="https://www.flaticon.com"
        rel="noopener noreferrer"
        target="_blank"
      >
         www.flaticon.com
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`App Components - App Snapshots renders user loaded 1`] = `
<div>
  <div
    className="ui green center aligned segment"
  >
    <div
      className="ui three column grid"
    >
      <div
        className="four wide column"
      />
      <div
        className="middle aligned eight wide column"
      >
        <h1
          className="ui header"
        >
          Spotify Stats
        </h1>
      </div>
      <div
        className="four wide column"
      >
        <button
          className="ui green inverted right floated button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          Log in with Spotify
        </button>
      </div>
    </div>
  </div>
  <div />
  <div
    className="ui center aligned segment footer"
  >
    <p>
      Favicon made by
      <a
        href="https://www.flaticon.com/authors/gregor-cresnar"
        rel="noopener noreferrer"
        target="_blank"
      >
         Gregor Cresnar 
      </a>
      from
      <a
        href="https://www.flaticon.com"
        rel="noopener noreferrer"
        target="_blank"
      >
         www.flaticon.com
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`App Components - App Snapshots renders user not loaded 1`] = `
<div>
  <div
    className="ui green center aligned segment"
  >
    <div
      className="ui three column grid"
    >
      <div
        className="four wide column"
      />
      <div
        className="middle aligned eight wide column"
      >
        <h1
          className="ui header"
        >
          Spotify Stats
        </h1>
      </div>
      <div
        className="four wide column"
      >
        <button
          className="ui green inverted right floated button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          Log in with Spotify
        </button>
      </div>
    </div>
  </div>
  <div
    className="ui basic segment screen-loader"
  >
    <div
      className="ui active transition visible inverted dimmer"
      onClick={[Function]}
    >
      <div
        className="content"
      >
        <div
          className="center"
        >
          <div
            className="ui big inverted text loader"
          >
            <h3
              className="ui header"
            >
              Loading...
            </h3>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ui center aligned segment footer"
  >
    <p>
      Favicon made by
      <a
        href="https://www.flaticon.com/authors/gregor-cresnar"
        rel="noopener noreferrer"
        target="_blank"
      >
         Gregor Cresnar 
      </a>
      from
      <a
        href="https://www.flaticon.com"
        rel="noopener noreferrer"
        target="_blank"
      >
         www.flaticon.com
      </a>
      .
    </p>
  </div>
</div>
`;
